--- a/viz/templates/HTML/base.html
+++ b/viz/templates/HTML/base.html
@@ -4,6 +4,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
 integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
+<link rel="stylesheet" type="text/css" href="{% static '/CSS/style.css' %}">
 <style type="text/css">
 .container {
   position: relative;
@@ -34,12 +35,23 @@ VIZ - your photo sharing companion
 </title>
 </head>
 <body>
+<br>
+{% if user.is_authenticated %}
+<a href="{% url 'viz-showSignOut' %}"><button style="float:right;align:top;margin-left=200px;"> Logout</button></a>
+{% endif %}
 <div>
-<center><a href=""><img src={% static "/IMG/title.png" %}  alt="Title" align="middle|top"/></a><br>
+<center><a href="{% url 'viz-home' %}"><img src={% static "/IMG/title.png" %}  alt="Title" align="middle|top"/></a><br>
 <p ><h3 style="color:red">The Ultimate Photo Sharing Platform.</h3></p>
 <center>
 </div>
 {% block content %}{% endblock %}
+{% if messages %}
+            {% for message in messages %}
+              <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+              </div>
+            {% endfor %}
+          {% endif %}
 <!--Hello
 <form action="/PHP/abc.php" method="POST"><button type="submit" name="submit" value="dasda" label="asdasdg" style="width: 100px; height: 30px;">yo</button></form>-->
 </body>
