--- a/viz/templates/HTML/loginHome.html
+++ b/viz/templates/HTML/loginHome.html
@@ -1,2 +1,2 @@
 {% extends "HTML/base.html" %}
-{% block content %}You have logged in{% endblock content %}
+{% block content %}<h2><center>You have logged in</h2></center>{% endblock content %}
