--- a/viz/templates/HTML/profile.html
+++ b/viz/templates/HTML/profile.html
@@ -1,4 +1,21 @@
 {% extends "HTML/base.html" %}
+{% load crispy_forms_tags %}
 {% block content %}
-<h2>{{ user.username }}</h2>
+<div class="content-section">
+      <div class="media">
+        <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
+        <div class="media-body">
+          <h2 class="account-heading">{{ user.username }}</h2>
+          <p class="text-secondary">{{ user.email }}</p>
+        </div>
+      </div>
+      <div>
+      	<button onclick="showHideProfileUpdate()" class="button">Update Profile</button>
+      </div>
+      <center><form method="POST" id="updateProfileForm" style="display: none"enctype="multipart/form-data">{% csrf_token %}
+      		<legend style="color:black">Update Profile Info</legend>
+<div style="width:50%;margin-left: auto; margin-right: auto;color:black; background-color: rgba(255,255,255,0.5);">{{ p_form|crispy }}<br>
+<input style="margin-bottom: 10px;" type="submit" value="Update"></center>
+</form></div>
+    </div>
 {% endblock content %}
