--- a/viz/templates/HTML/base.html
+++ b/viz/templates/HTML/base.html
@@ -1,11 +1,7 @@
 {% load static %}
 <html>
 <head>
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js">
-  function showHideProfileUpdate() { 
-  if(document.getElementById("updateProfileForm").style.display==="none")document.getElementById("updateProfileForm").style.display="block";
-  else document.getElementById("updateProfileForm").style.display="none"
-}</script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
 integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
 <link rel="stylesheet" type="text/css" href="{% static '/CSS/style.css' %}">
