--- a/viz/templates/HTML/profile.html
+++ b/viz/templates/HTML/profile.html
@@ -1,5 +1,6 @@
 {% extends "HTML/base.html" %}
 {% load crispy_forms_tags %}
+{% load static %}
 {% block content %}
 <div class="content-section">
       <div class="media">
@@ -9,10 +10,15 @@
           <p class="text-secondary">{{ user.email }}</p>
         </div>
       </div>
-      <div>
-      	<button onclick="showHideProfileUpdate()" class="button">Update Profile</button>
+      <div><script type="text/javascript">function showHideProfileUpdate() { var x= document.getElementById("updateProfileForm").style.display;
+      if(x.valueOf()=="block"){document.getElementById("updateProfileForm").style.display="none";document.getElementById("profileUpdateButton").value="Update Profile";}
+      else {document.getElementById("updateProfileForm").style.display="block";document.getElementById("profileUpdateButton").value="Hide Update Form";}
+
+  }</script>
+      	<button onclick="showHideProfileUpdate()"  value="Update Profile"><output name="bv" id="profileUpdateButton">Update Profile</output>></button>
+        <a href="{% url 'viz-albums' %}"><button>Albums</button></a>
       </div>
-      <center><form method="POST" id="updateProfileForm" style="display: none"enctype="multipart/form-data">{% csrf_token %}
+      <center><form method="POST" id="updateProfileForm" style="display: none" enctype="multipart/form-data">{% csrf_token %}
       		<legend style="color:black">Update Profile Info</legend>
 <div style="width:50%;margin-left: auto; margin-right: auto;color:black; background-color: rgba(255,255,255,0.5);">{{ p_form|crispy }}<br>
 <input style="margin-bottom: 10px;" type="submit" value="Update"></center>
