--- a/viz/templates/HTML/showPhoto.html
+++ b/viz/templates/HTML/showPhoto.html
@@ -2,21 +2,20 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
-{% for albums in album %}
-		{% if albums.owner.username == user.username %}
-        <article class="media content-section">
-          <img class="rounded-circle article-img" src="{{ album.owner.profile.image.url }}"/>
-          <div class="media-body">
-            <div class="article-metadata">
-              <a class="mr-2" href="#">{{ albums.owner }}</a>
-              <small class="text-muted">{{ albums.date_posted|date:"F d, Y" }}</small>
-            </div>
-            <h2 class="article-title"> <a class="article-title" href="{% url 'viz-showAlbum' albums.albumid %}">{{ albums.title }}</a></h2>
-            <p class="article-content"><img src="{{albums.cover.url}}"  height="300" width="300"/></p>
+	{% if photo.owner.username == user.username %}
+      <article class="media content-section">
+        <div class="media-body">
+          <div class="article-metadata">
+            <a class="mr-2" href="#">{{ photo.owner }}</a>
+            <small class="text-muted">{{ photo.date_posted|date:"F d, Y" }}</small>
+            
           </div>
-        </article>
-        {% endif %}
-    {% endfor %}
+          <h2 class="article-title"> {{ photo.title }}</h2>
+          <small class="text-muted">{{ photo.description }}</small>
+          <p class="article-content"><img src="{{photo.image.url}}"/></p>
+        </div>
+      </article>
+      {% endif %}
 {% endblock content %}
 
 
