--- a/viz/templates/HTML/showAlbum.html
+++ b/viz/templates/HTML/showAlbum.html
@@ -2,6 +2,9 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
+<div style="float:left;">
+  <a href="{% url 'viz-updateAlbum' album.albumid %}"><button>Update your Album</button></a>
+</div><br><br>
 	{% if album.owner.username == user.username %}
       <article class="media content-section">
         <img class="rounded-circle article-img" src="{{ album.cover.url }}" height="300" width="300">
