Photo upload part complete

--- a/viz/templates/HTML/albumList.html
+++ b/viz/templates/HTML/albumList.html
@@ -4,7 +4,11 @@
 {% block content %}
 <div style="float:left;">
   <a href="{% url 'viz-createAlbum' %}"><button>Create an Album</button></a>
-</div><br><br>
+</div>
+<div style="float:left;">
+  <a href="{% url 'viz-createPhoto' %}"><button>Add a Photo</button></a>
+</div>
+<br><br>
 <h1 style="color:red;">YOUR ALBUMS</h1>
 {% for albums in album %}
 		{% if albums.owner.username == user.username %}
