--- a/viz/templates/HTML/passwordChange.html
+++ b/viz/templates/HTML/passwordChange.html
@@ -2,27 +2,14 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}<div class="container">
-	<h3 style="float:right;">Don't have an Account?</h3>
-<br><br>
-<a href="{% url 'viz-showSignUp' %}"><button  style="float:right;width: 100px; height: 50px;">Sign Up</button></a>
-<!--<button onclick="showSignIn()" style="float:right;width: 100px; height: 50px;">Login</button>-->
-<br>
-<div class="cd" id="SignIn">
-<center><h2>SIGN IN</h2></center>
-
-<form method="POST">{% csrf_token %}{{ form|crispy }}<br>
-<input style="margin-bottom: 10px;" type="submit" value="Login">
-</form>
-</div>
-</div>{% endblock content %}
+	<div class="cd" >
+<center><h2>CHANGE PASSWORD</h2></center>
+<form method="POST" >{% csrf_token %}
+{{ form|crispy }}<br>
+<center><input style="margin-bottom: 10px;" type="submit" value="SUBMIT"></center>
+</form></div></div>{% endblock content %}
 
 
-<!--<div class="cd" id="SignUp">
-<center><h2>SIGN UP</h2></center>
-<form method="POST">{% csrf_token %}
-{{ formSignUp|crispy }}<br>
-<center><input style="margin-bottom: 10px;" type="submit" value="Sign Up"></center>
-</form>-->
 <!--<form method="POST">{% csrf_token %}<center>
 <input style="margin-bottom: 10px;" type="username" name="username" placeholder="Username" required><br>
 <input style="margin-bottom: 10px;" type="email" name="email" placeholder="E-mail" required><br>
