--- a/viz/templates/HTML/photoCreateForm.html
+++ b/viz/templates/HTML/photoCreateForm.html
@@ -1,7 +1,12 @@
 {% extends "HTML/base.html" %}
 {% load static %}
 {% load crispy_forms_tags %}
-{% block content %}<div class="container">
+{% block content %}
+<div style="float:left;">
+  <a href="{% url 'viz-profile' %}"><button class="btn btn-back">BACK TO PROFILE</button></a>
+</div>
+<br><br>
+<div class="container">
 {% if "update" in request.build_absolute_uri %}
 <center><h2>UPDATE YOUR PHOTO</h2></center>
 {% else %}
