--- a/viz/templates/HTML/profile.html
+++ b/viz/templates/HTML/profile.html
@@ -15,10 +15,13 @@
       if(x.valueOf()=="block"){document.getElementById("updateProfileForm").style.display="none";document.getElementById("profileUpdateButton").value="Update Profile";}
       else {document.getElementById("updateProfileForm").style.display="block";document.getElementById("profileUpdateButton").value="Hide Update Form";}
 
-  }</script>
+  }</script><div style="float:right;">
+      <a href="{% url 'viz-passwordChange' %}"><button style="float:right;">Change Password</button></a></div>
       	<button onclick="showHideProfileUpdate()"  value="Update Profile"><output name="bv" id="profileUpdateButton">Update Profile</output></button>
         <a href="{% url 'viz-albums' %}"><button>Albums</button></a>
       </div>
+      <br>
+      
       <center><form method="POST" id="updateProfileForm" style="display: none" enctype="multipart/form-data">{% csrf_token %}
       		<legend style="color:black">Update Profile Info</legend>
 <div style="width:50%;margin-left: auto; margin-right: auto;color:black; background-color: rgba(255,255,255,0.5);">{{ p_form|crispy }}<br>
