--- a/viz/templates/HTML/showAlbum.html
+++ b/viz/templates/HTML/showAlbum.html
@@ -3,6 +3,10 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <div style="float:left;">
+  <a href="{% url 'viz-albums' %}"><button class="btn btn-back">BACK TO ALBUMS</button></a>
+</div>
+<br><br>
+<div style="float:left;">
   <a href="{% url 'viz-updateAlbum' album.albumid %}"><button>Update your Album</button></a>
 </div>
 <div style="float:left;">
