--- a/viz/templates/HTML/showPhoto.html
+++ b/viz/templates/HTML/showPhoto.html
@@ -2,6 +2,17 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
+<div style="float:left;">
+  <a href="{% url 'viz-albums' %}"><button class="btn btn-back">BACK TO ALBUMS</button></a>
+</div>
+<br><br>
+<div style="float:left;">
+  <a href="{% url 'viz-updatePhoto' photo.photoid %}"><button>Update this Photo</button></a>
+</div>
+<div style="float:left;">
+  <a href="{% url 'viz-deletePhoto' photo.photoid %}"><button>Delete this Photo</button></a>
+</div>
+<br><br>
 	{% if photo.owner.username == user.username %}
       <article class="media content-section">
         <div class="media-body">
@@ -10,7 +21,7 @@
             <small class="text-muted">{{ photo.date_posted|date:"F d, Y" }}</small>
             
           </div>
-          <small class="text-muted">{{ photo.description }}</small>
+          <p class="container" style="float:left;">DESCRIPTION:<br>{{ photo.description }}</p>
           <p class="article-content"><img src="{{photo.image.url}}"/></p>
         </div>
       </article>
