--- a/viz/templates/HTML/signUp.html
+++ b/viz/templates/HTML/signUp.html
@@ -2,7 +2,12 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}<div class="container">
-<a href="{% url 'viz-showSignIn' %}"><button  style="float:right;width: 100px; height: 50px;">Login</button></a><div class="cd" id="SignUp">
+<h3 style="float:right;">Have an Account?</h3>
+<br><br>
+<a href="{% url 'viz-showSignIn' %}">
+	<button  style="float:right;width: 100px; height: 50px;">Login</button></a>
+<br>
+	<div class="cd" id="SignUp">
 <center><h2>SIGN UP</h2></center>
 <form method="POST" enctype="multipart/form-data">{% csrf_token %}
 {{ form|crispy }}<br>
