--- a/viz/templates/HTML/photoCreateForm.html
+++ b/viz/templates/HTML/photoCreateForm.html
@@ -2,9 +2,16 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
+{% if "update" in request.build_absolute_uri %}
 <div style="float:left;">
-  <a href="{% url 'viz-profile' %}"><button class="btn btn-back">BACK TO PROFILE</button></a>
+  <a href="{% url 'viz-showAlbum' object.albumid.albumid %}"><button class="btn btn-back">BACK TO ALBUM</button></a>
 </div>
+{% else %}
+<div style="float:left;">
+  <a href="{% url 'viz-albums' %}"><button class="btn btn-back">BACK TO ALBUMS</button></a>
+</div>
+{% endif %}
+
 <br><br>
 <div class="container">
 {% if "update" in request.build_absolute_uri %}
