--- a/viz/templates/HTML/showPhoto.html
+++ b/viz/templates/HTML/showPhoto.html
@@ -3,8 +3,9 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <div style="float:left;">
-  <a href="{% url 'viz-albums' %}"><button class="btn btn-back">BACK TO ALBUMS</button></a>
+  <a href="{% url 'viz-showAlbum' photo.albumid.albumid %}"><button class="btn btn-back">BACK TO ALBUM</button></a>
 </div>
+
 <br><br>
 <div style="float:left;">
   <a href="{% url 'viz-updatePhoto' photo.photoid %}"><button>Update this Photo</button></a>
