--- a/viz/templates/HTML/showAlbum.html
+++ b/viz/templates/HTML/showAlbum.html
@@ -12,6 +12,9 @@
 <div style="float:left;">
   <a href="{% url 'viz-deleteAlbum' album.albumid %}"><button>Delete your Album</button></a>
 </div>
+<div style="float:left;">
+  <a href="{% url 'viz-createPhotoInAlbum' album.albumid %}"><button>Add a Photo</button></a>
+</div>
 <br><br>
 	{% if album.owner.username == user.username %}
       <article class="media content-section">
