Rendering of API views complete

--- a/viz/api/templates/HTML/apiBase.html
+++ b/viz/api/templates/HTML/apiBase.html
@@ -37,15 +37,15 @@ VIZ - your photo sharing companion
 <body>
 <br>
 {% if user.is_authenticated %}
-<a href="{% url 'viz-showSignOut' %}"><button style="float:right;align:top;margin-left=200px;">Logout</button></a>
-<a href="{% url 'viz-profile' %}"><button style="float:right;align:top;margin-left=200px;">Profile</button></a><br>
+<a href="{% url 'viz-api-SignOut' %}"><button style="float:right;align:top;margin-left=200px;">Logout</button></a>
+<a href="{% url 'viz-api-profile' %}"><button style="float:right;align:top;margin-left=200px;">Profile</button></a><br>
 {% endif %}
 <div>
 <center>
   {% if user.is_authenticated %}
-  <a href="{% url 'viz-profile' %}"><img src={% static "/IMG/title.png" %}  alt="Title" style="margin-left: auto; margin-right: auto;"/></a><br>
+  <a href="{% url 'viz-api-profile' %}"><img src={% static "/IMG/title.png" %}  alt="Title" style="margin-left: auto; margin-right: auto;"/></a><br>
   {% else %}
-  <a href="{% url 'viz-home' %}"><img src={% static "/IMG/title.png" %}  alt="Title" style="margin-left: auto; margin-right: auto;"/></a><br>
+  <a href="{% url 'viz-api-home' %}"><img src={% static "/IMG/title.png" %}  alt="Title" style="margin-left: auto; margin-right: auto;"/></a><br>
   {% endif %}
 <p><h3 style="color:red">The Ultimate Photo Sharing Platform.</h3></p>
 <center>
