--- a/viz/api/templates/HTML/apiAlbumList.html
+++ b/viz/api/templates/HTML/apiAlbumList.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <div style="float:left;">
-  <a href="{% url 'viz-profile' %}"><button class="btn btn-back">BACK TO PROFILE</button></a>
+  <a href="{% url 'viz-api-profile' %}"><button class="btn btn-back">BACK TO PROFILE</button></a>
 </div>
 <br><br>
 <div style="float:left;">
