--- a/viz/api/templates/HTML/apiPhotoDelete.html
+++ b/viz/api/templates/HTML/apiPhotoDelete.html
@@ -1,4 +1,4 @@
-{% extends "HTML/base.html" %}
+{% extends "HTML/apiBase.html" %}
 {% load static %}
 {% block content %}<div class="container">
 <center><h2>DELETE THIS PHOTO {{ object.title }}</h2></center>
