--- a/viz/api/templates/HTML/apiPhotoCreate.html
+++ b/viz/api/templates/HTML/apiPhotoCreate.html
@@ -1,4 +1,4 @@
-{% extends "HTML/base.html" %}
+{% extends "HTML/apiBase.html" %}
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
